# feedme

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build_test_release.yaml
migrations/: 001_initial.sql
src/: cli.rs  config.rs  fetcher.rs  lib.rs  main.rs
src/api/: auth.rs  fever.rs  mod.rs
src/db/: mod.rs  models.rs  repo.rs
tests/: integration.rs
