[package]
name = "feedme"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
feedparser-rs = { version = "0.5.3", default-features = false }
md5 = "0.8.0"
opml = "1.1.6"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
http = "1.4.0"
tower = { version = "0.5.3", features = ["util"] }
